--- a/BlogIntegrationTests/packages.config
+++ b/BlogIntegrationTests/packages.config
@@ -2,12 +2,16 @@
 <packages>
   <package id="Castle.Core" version="4.3.1" targetFramework="net452" />
   <package id="Dapper" version="1.50.5" targetFramework="net452" />
+  <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net452" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="MongoDB.Bson" version="2.4.0" targetFramework="net452" />
+  <package id="MongoDB.Driver" version="2.4.0" targetFramework="net452" />
+  <package id="MongoDB.Driver.Core" version="2.4.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="NUnit" version="3.10.1" targetFramework="net452" />
   <package id="NUnit.Console" version="3.8.0" targetFramework="net452" />
@@ -20,6 +24,7 @@
   <package id="NUnit.Runners" version="3.8.0" targetFramework="net452" />
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net452" />
   <package id="NUnitTestAdapter" version="2.1.1" targetFramework="net452" />
+  <package id="RazorEngine" version="3.9.0" targetFramework="net452" />
   <package id="Selenium.Firefox.WebDriver" version="0.21.0" targetFramework="net452" />
   <package id="Selenium.Support" version="3.13.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.13.0" targetFramework="net452" />
@@ -29,6 +34,7 @@
   <package id="SpecFlow" version="2.3.2" targetFramework="net452" />
   <package id="SpecFlow.CustomPlugin" version="2.3.2" targetFramework="net452" />
   <package id="SpecFlow.NUnit" version="2.3.2" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net452" />
   <package id="TeamCity.SpecFlow.Reporting" version="1.3.7" targetFramework="net452" />
   <package id="TestStack.Seleno" version="0.9.61" targetFramework="net452" />
